--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
 		"lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,svelte,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,svelte,astro}\""
 	},
 	"dependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/mdx": "^4.3.0",
-		"@astrojs/rss": "^4.0.12",
-		"@astrojs/sitemap": "^3.4.1",
+		"@astrojs/check": "0.9.6",
+		"@astrojs/mdx": "4.3.13",
+		"@astrojs/rss": "4.0.15",
+		"@astrojs/sitemap": "3.7.0",
 		"@astrojs/tailwind": "^6.0.2",
-		"@astrojs/vercel": "^8.2.1",
+		"@astrojs/vercel": "9.0.4",
 		"@vercel/analytics": "^1.2.2",
-		"astro": "^5.14.4",
+		"astro": "5.17.2",
 		"astro-expressive-code": "^0.33.5",
 		"astro-icon": "^1.1.0",
 		"clsx": "^2.1.0",
