--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"astro": "5.17.2",
 		"astro-expressive-code": "^0.33.5",
 		"astro-icon": "^1.1.0",
+		"baseline-browser-mapping": "^2.9.19",
+		"caniuse-lite": "^1.0.30001770",
 		"clsx": "^2.1.0",
 		"mdast-util-to-string": "^4.0.0",
 		"reading-time": "^1.5.0",
