feat: refactor configuration imports and fix avatar image import
- Consolidate imports from `@/site-config` to `@/config` in BaseHead, ReadPage, and RecordPage components
- Update NowPage to use `getLocalizedNowConfig` and rename `resumeConfig` to `nowConfig` for clarity
- Change ReadPage to display `item.opinion` instead of `item.description`
- Fix avatar image import in ResumePage to resolve dynamic/static import conflict using `getImageGlob` utility
- Remove unused `getI18nText` import from BaseHead component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 			"@/utils": ["src/utils/index.ts"],
 			"@/utils/*": ["src/utils/*"],
 			"@/types": ["src/types.ts"],
-			"@/site-config": ["src/site.config.ts"],
+			"@/config": ["src/config/index.ts"],
 			"@/i18n": ["src/i18n.ts"]
 		}
 	},
